Home page actors and video

--- a/src/css/default.styl
+++ b/src/css/default.styl
@@ -1,6 +1,9 @@
 *
   box-sizing border-box
   
+.center
+  text-align center
+  
 html, body
   height 100%
   
@@ -11,3 +14,12 @@ body
     background url(/img/satinweave.png)
     min-height 100%
     width 75%
+    padding-bottom 30px
+    
+.navpic
+  text-align: center;
+  margin-bottom:20px
+  font-size:0px
+  
+  a 
+    display:inline-block;
