--- a/src/css/nav.styl
+++ b/src/css/nav.styl
@@ -1,11 +1,12 @@
-.navpic
-  text-align: center;
-  margin-bottom:20px
-  font-size:0px
+.nav > li > a
+  padding-left 10px
+  padding-right 10px
+
+.navbar-brand
+  padding-top 0
+  padding-bottom 0
+  height 50px
   
-  a 
-    display:inline-block;
-    height: 300px;
-    width:200px;
-    border:2px solid red;
+  img
+    height 100%
     
