--- a/src/views/default.hbs
+++ b/src/views/default.hbs
@@ -1,6 +1,14 @@
 ---
 name: home
 ---
+<div class="navpic">
+  <a href=""><img src="/img/actors/Alan-Cranston.jpg" title="Sen. Alan Cranston" /></a>
+  <a href=""><img src="/img/actors/Dennis-DeConcini.jpg" title="Sen. Dennis DeConcini" /></a>
+  <a href=""><img src="/img/actors/John-Glenn.jpg" title="Sen. John Glenn" /></a>
+  <a href=""><img src="/img/actors/John-McCain.jpg" title="Sen. John McCain" /></a>
+  <a href=""><img src="/img/actors/Don-Riegle.jpg" title="Sen. Don Riegle" /></a>
+</div>
+
 <p>Welcome to "Understanding the Keating Five," the only comprehensive 
 website on the infamous Keating Five scandal. What started as a meeting
 between some Senators and the head of the Federal Home Loan Bank Board
@@ -27,3 +35,10 @@ S&L industry. The “Related Issues” section provides background reading on
 theories of representation and assorted effort to define the appropriate limits of 
 constituent service. The “Enduring Issues” section highlights broader issues from 
 this case that are still relevant today.</p>
+
+<div class="center">
+  <iframe src="http://player.vimeo.com/video/6566512?title=0&amp;byline=0&amp;portrait=0" width="400" height="300" frameborder="0" webkitAllowFullScreen allowFullScreen></iframe>
+  <p>
+    <a href="http://vimeo.com/6566512">The Keating Five</a> from <a href="http://vimeo.com/user2298350">Ross Cheit</a> on <a href="http://vimeo.com">Vimeo</a>.
+  </p>
+</div>
