--- a/src/partials/nav.hbs
+++ b/src/partials/nav.hbs
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">Keating Five</a>
+    <a class="navbar-brand" href="/"><img src="/img/logo.jpg"></a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
