--- a/src/partials/nav.hbs
+++ b/src/partials/nav.hbs
@@ -15,7 +15,11 @@
     <ul class="nav navbar-nav">
       <li{{#is name 'home'}} class="active"{{/is}}><a href="/">Home</a></li>
       <li{{#is name 'about'}} class="active"{{/is}}><a href="/about">Story</a></li>
-      <li{{#is name 'contact'}} class="active"{{/is}}><a href="/contact">Contact</a></li>
+      <li{{#is name 'timeline'}} class="active"{{/is}}><a href="/timeline">Timeline</a></li>
+      <li{{#is name 'actors'}} class="active"{{/is}}><a href="/actors">Actors</a></li>
+      <li{{#is name 'evidence'}} class="active"{{/is}}><a href="/evidence">Evidence</a></li>
+      <li{{#is name 'enduring'}} class="active"{{/is}}><a href="/enduring">Enduring Issues</a></li>
+      <li{{#is name 'resources'}} class="active"{{/is}}><a href="/resources">Additional Resources</a></li>
     </ul>
     <form class="navbar-form navbar-right" action="" role="search">
       <div class="form-group">
