--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <div class="container">
@@ -19,6 +19,6 @@
       </div>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <script src="js/scripts.min.js"></script>
+    <script src="/js/scripts.min.js"></script>
   </body>
 </html>
