--- a/src/views/default.hbs
+++ b/src/views/default.hbs
@@ -12,7 +12,7 @@ name: home
 <p>Welcome to "Understanding the Keating Five," the only comprehensive 
 website on the infamous Keating Five scandal. What started as a meeting
 between some Senators and the head of the Federal Home Loan Bank Board
-ended with a lengthy and nationally­televised hearing of the Senate Ethics
+ended with a lengthy and nationally&#45;televised hearing of the Senate Ethics
 Committee. The hearings investigated the relationship between Savings & Loan
 tycoon Charles Keating and five U.S. senators. The hearings raise important
 issues about ethics, representation and democracy. Did some (or all) of the
@@ -31,12 +31,13 @@ arties in the case, including the remarkably detailed minutes of the meeting wit
 the San Francisco regulators, while others are hotly contested. It is up to you to 
 weigh the evidence after comparing and contrasting the various testimonies.</p>
 <p>The “Background” section places the events in the context of the collapse of the 
-S&L industry. The “Related Issues” section provides background reading on 
-theories of representation and assorted effort to define the appropriate limits of 
-constituent service. The “Enduring Issues” section highlights broader issues from 
+S&L industry.  The “Related Issues” section provides background reading on theories
+of representation, the S&L industry's collapse, and the appropriate limits of
+constituent service. The “Enduring Issues” section highlights broader issues from
 this case that are still relevant today.</p>
 
 <div class="center">
+  <h3>A First Look at the Hearings</h3>
   <iframe src="http://player.vimeo.com/video/6566512?title=0&amp;byline=0&amp;portrait=0" width="400" height="300" frameborder="0" webkitAllowFullScreen allowFullScreen></iframe>
   <p>
     <a href="http://vimeo.com/6566512">The Keating Five</a> from <a href="http://vimeo.com/user2298350">Ross Cheit</a> on <a href="http://vimeo.com">Vimeo</a>.
