--- a/src/css/default.styl
+++ b/src/css/default.styl
@@ -17,9 +17,170 @@ body
     padding-bottom 30px
     
 .navpic
-  text-align: center;
+  text-align: center
   margin-bottom:20px
   font-size:0px
   
   a 
-    display:inline-block;
+    display:inline-block
+    
+.actor-panel {
+    text-align: center;
+    margin-top : 10px;
+    margin-right : 10px;
+    display : inline-block;
+    padding : 10px;
+    border : 1px solid #000000;
+    border-radius : 5px;
+    -moz-border-radius : 5px;
+    -webkit-border-radius : 5px;
+}
+
+.actor-panel img {
+    margin-bottom : 10px;
+}
+
+.actor-panel h3 {
+    font-size : 0.9em;
+}
+
+.evidence-wrapper {
+    display : table;
+    width : 100%;
+}
+
+.evidence-panel {
+    display : table-cell;
+    width : 20%;
+    padding-right : 15px;
+}
+
+body {
+	background : beige;
+    color : #3a1e1a;
+}
+ 
+div#wrapper-logo {
+    margin : 10px auto;
+    width : 1000px;
+    text-align: left;
+}
+
+div#wrapper-user-info {
+    float : right;
+    color : #ffffff;
+}
+
+div#wrapper-user-info a {
+    color : #000000;
+    text-decoration : none;
+}
+
+div#wrapper-user-info a:hover {
+    text-decoration: underline;
+}
+
+div#wrapper-timeline {
+    width : 1000px;
+    margin : 0px auto 10px auto;
+    overflow : hidden;
+}
+
+div#wrapper-timeline-control {
+    /*
+    background : #3a1e1a;
+    padding : 10px;
+    border-top-left-radius : 5px;
+    border-top-right-radius : 5px;
+    -moz-border-radius-topleft : 5px;
+    -moz-border-radius-topright : 5px;
+    -webkit-border-radius-topleft : 5px;
+    -webkit-border-radius-topright : 5px;
+    */
+    margin-bottom : 5px;
+}
+
+div#wrapper-timeline-control a {
+    font-size : 1.2em;
+    color : #900000;
+}
+
+div#wrapper-timeline-container {
+    
+}
+
+div#placment {
+    height : 300px;
+}
+
+div#wrapper-notifications {
+    width : 980px;
+    margin : 0px auto 10px auto;
+    border : 2px solid #999999;
+    border-radius : 5px;
+    -moz-border-radius : 5px;
+    -webkit-border-radius : 5px;
+    padding : 10px;
+    vertical-align : middle;
+}
+
+div#wrapper-content {
+    border : 2px solid #dddddd;
+    border-radius : 5px;
+    -moz-border-radius : 5px;
+    -webkit-border-radius : 5px;
+    background : #ffffff;
+	margin : 0px auto 100px auto;
+	width : 970px;
+	padding : 15px;
+}
+
+div#wrapper-footer {
+    position : fixed;
+    width : 100%;
+    bottom : 0px;
+    /*
+    opacity:0.4;
+    filter:alpha(opacity=40);
+    */
+}
+
+div#footer-content {
+    padding : 10px;
+    color : #3a1e1a;
+    border : 2px solid #3a1e1a;
+    border-bottom : none;
+    background : tan;
+    border-top-left-radius : 5px;
+    border-top-right-radius : 5px;
+    -moz-border-radius-topleft : 5px;
+    -moz-border-radius-topright : 5px;
+    -webkit-border-radius-topleft : 5px;
+    -webkit-border-radius-topright : 5px;
+    margin : 0px auto;
+    width : 980px;
+}
+
+div#footer-content table {
+    width : 100%;
+}
+
+div#footer-content table td {
+    text-align : center;
+}
+
+.right-column {
+    width : 300px;
+    float : right;
+    margin : 0px 0px 10px 10px;
+    border : 1px solid #999;
+    border-radius : 5px;
+    -moz-border-radius : 5px;
+    -webkit-border-radius : 5px;
+    padding : 10px;
+}
+
+.right-column h2 {
+    font-size : 1.2em;
+    margin-bottom: 5px;
+}
