--- a/src/views/actors/affiliates/Lincoln-Savings-and-Loan.hbs
+++ b/src/views/actors/affiliates/Lincoln-Savings-and-Loan.hbs
@@ -3,7 +3,16 @@ name: actors
 ---
 
 <h2> Lincoln Savings and Loan</h2>
-
+<div class="right-column">
+    <h2>Exhibits</h2>
+    <ul>
+                <li><a href="/files/exhibits/DeConcini/%231 Greenspan Supports Lincoln 02-13-85.pdf">Exhibit #1 Greenspan Supports Lincoln 02-13-85</a></li>
+<li><a href="/files/exhibits/DeConcini/%232 Lincoln's View 06-20-84.pdf">Exhibit #2 Lincoln's View 06-20-84</a></li>
+<li><a href="/files/exhibits/DeConcini/%233 Arthur Young Letter 03-17-87.pdf">Exhibit #3 Arthur Young Letter 03-17-87</a></li>
+<li><a href="/files/exhibits/DeConcini/%234 _Get Black_ Memo 07-15-87.jpeg">Exhibit #4 _Get Black_ Memo 07-15-87</a></li>
+<li><a href="/files/exhibits/DeConcini/%235 Keating to McCain 07-31-86.pdf">Exhibit #5 Keating to McCain 07-31-86</a></li>
+            </ul>
+    </div>
 
 <img src="https://apps.college.brown.edu/keating5/img/actors/Lincoln-Savings.jpg" alt="Lincoln Savings and Loan" class="float-left">
 <p>The Lincoln Savings and Loan Association of Irvine, California was the financial institution at the heart of the Keating Five scandal. Through the early 1980s, Lincoln was a conservatively-run enterprise. &nbsp;Almost half its assets were in home loans and only a quarter of its assets were considered at risk. It had slow growth at best, and sustained losses for several years until 1983, when it made a profit of a few million dollars.&nbsp;</p><p>In February 1984, Charles Keating became the head of Lincoln. &nbsp;As chairman of a home construction company, American Continental Corporation, he purchased Lincoln for $51 million. Keating fired the existing management and, over the next four years, Lincoln's assets increased from $1.1 billion to $5.5 billion. Such savings and loan associations had been deregulated in the early 1980s, which allowed them to make highly risky investments with their depositors' money, a change of which Keating took advantage. In February 1985, Alan Greenspan sent a letter to officials of the Federal Home Loan Bank of San Francisco. &nbsp;The letter supported Lincoln’s application for an exemption to a bank board rule forbidding substantial amounts of some investments.&nbsp;<br></p><p>When American Continental Corporation, the parent &nbsp;company of Lincoln Savings, went bankrupt in 1989, more than 21,000 investors, many of whom were elderly, lost their life savings. This total came to around $285 million: many investors held securities backed by the parent company rather than deposits in the federally insured institution. This distinction was apparently lost on many if not most of them until it was too late. When the federal government seized Lincoln, the government covered almost $3 billion of the company’s losses. Many creditors were made whole, and the government then attempted to liquidate the seized assets through its Resolution Trust Corporation. This was often done at pennies on the dollar compared to what the property had allegedly been worth and the valuation at which loans against it had been made. Charles Keating was sent to prison for fraud.<br></p><p><br></p>
