--- a/src/views/actors/senators/John-McCain.hbs
+++ b/src/views/actors/senators/John-McCain.hbs
@@ -18,13 +18,17 @@ name: actors
      
     <h2>Exhibits</h2>
     <ul>
+    <li><a href="/files/exhibits/DeConcini/%231 McCain to Gray 05-25-89.pdf">Exhibit #1 McCain to Gray 05-25-89</a></li>
+<li><a href="/files/exhibits/DeConcini/%232 Gray's Response to (1) 05-30-89.pdf">Exhibit #2 Gray's Response to (1) 05-30-89</a></li>
+<li><a href="/files/exhibits/DeConcini/%233 McCain's Response to (2) 06-02-89.pdf">Exhibit #3 McCain's Response to (2) 06-02-89</a></li>
+<li><a href="/files/exhibits/DeConcini/%234 McCain Press Release 07-25-89.pdf">Exhibit #4 McCain Press Release 07-25-89</a></li>
+<li><a href="/files/exhibits/DeConcini/%235 McCain to Gray 08-08-84.pdf">Exhibit #5 McCain to Gray 08-08-84</a></li>
+<li><a href="/files/exhibits/DeConcini/%236 McCain to Gray 07-21-86.pdf">Exhibit #6 McCain to Gray 07-21-86</a></li>
+<li><a href="/files/exhibits/DeConcini/%237 McCain Office Memo 11-03-86.pdf">Exhibit #7 McCain Office Memo 11-03-86</a></li>
+<li><a href="/files/exhibits/DeConcini/%238 McCain Office Memo 03-24-87.pdf">Exhibit #8 McCain Office Memo 03-24-87</a></li>
                 <li><a href="http://apps.college.brown.edu/keating5/evidence/download/13">Exhibit #70: Memo, to McCain from VanPaaschen, Banking Aide</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/14">Exhibit #71: Gray's letter to McCain</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/18">Exhibit #197: Invitation, Deconcini (McCain) to Riegle</a></li>
                 <li><a href="http://apps.college.brown.edu/keating5/evidence/download/19">Exhibit #200: Memo, VanPaaschen to McCain, "Talking Points for Meeting with Ed Gray"</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/20">Exhibit #256: Arthur Young Letter, Jack Attchison</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/24">Exhibit #485: Letter, McCain to Gray</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/26">Exhibit: Black Transcript</a></li>
+                
             </ul>
         
         <h2>Video</h2>
