--- a/src/views/actors/supporting_cast/Ed-Gray.hbs
+++ b/src/views/actors/supporting_cast/Ed-Gray.hbs
@@ -15,11 +15,15 @@ name: actors
      
     <h2>Exhibits</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/20">Exhibit #256: Arthur Young Letter, Jack Attchison</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/21">Exhibit #415: Cirona Report</a></li>
+                
                 <li><a href="http://apps.college.brown.edu/keating5/evidence/download/22">Exhibit #418: Affidavit of Shannon Fairbanks, Chief of Staff of the FHLBB</a></li>
                 <li><a href="http://apps.college.brown.edu/keating5/evidence/download/23">Exhibit #425: Affidavit of Mary Ellen Taylor, Director of Congressional Relations for the FHLBB</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/26">Exhibit: Black Transcript</a></li>
+                <li><a href="/files/exhibits/DeConcini/%231 Gray Statement 09-19-86.pdf">Exhibit #1 Gray Statement 09-19-86</a></li>
+                <li><a href="/files/exhibits/DeConcini/%232 Gray to Cirona 09-22-86.pdf">Exhibit #2 Gray to Cirona 09-22-86</a></li>
+                <li><a href="/files/exhibits/DeConcini/%233 Cirona to Gray 09-25-86.pdf">Exhibit #3 Cirona to Gray 09-25-86</a></li>
+                <li><a href="/files/exhibits/DeConcini/%234 Gray to Patriarca 06-02-88.pdf">Exhibit #4 Gray to Patriarca 06-02-88</a></li>
+                <li><a href="/files/exhibits/DeConcini/%235 Patriarca to Gray 07-14-88.pdf">Exhibit #5 Patriarca to Gray 07-14-88</a></li>
+                <li><a href="/files/exhibits/DeConcini/Black Transcript 04-10-87.pdf">Black Transcript 04-10-87</a></li>
             </ul>
         
         <h2>Video</h2>
