--- a/src/views/actors/senators/Don-Riegle.hbs
+++ b/src/views/actors/senators/Don-Riegle.hbs
@@ -13,9 +13,14 @@ name: actors
      
     <h2>Exhibits</h2>
     <ul>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/18">Exhibit #197: Invitation, Deconcini (McCain) to Riegle</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/20">Exhibit #256: Arthur Young Letter, Jack Attchison</a></li>
-                <li><a href="http://apps.college.brown.edu/keating5/evidence/download/26">Exhibit: Black Transcript</a></li>
+                <li><a href="/files/exhibits/DeConcini/%231 Riegle Recommends Gray 04-30-87.pdf">Exhibit #1 Riegle Recommends Gray 04-30-87</a></li>
+<li><a href="/files/exhibits/DeConcini/%232 Riegle to Keating 04-24-88.pdf">Exhibit #2 Riegle to Keating 04-24-88</a></li>
+<li><a href="/files/exhibits/DeConcini/%233 Keating as Riegle Contributor 02-22-88.pdf">Exhibit #3 Keating as Riegle Contributor 02-22-88</a></li>
+<li><a href="/files/exhibits/DeConcini/%234 Gottlieb Office Memo Keating Fundraiser 02-06-87.pdf">Exhibit #4 Gottlieb Office Memo Keating Fundraiser 02-06-87</a></li>
+<li><a href="/files/exhibits/DeConcini/%235 Grogan to Gottlieb Gray Recusal 02-25-87.pdf">Exhibit #5 Grogan to Gottlieb Gray Recusal 02-25-87</a></li>
+<li><a href="/files/exhibits/DeConcini/%236 Lori Riegle Affidavit 01-12-90.pdf">Exhibit #6 Lori Riegle Affidavit 01-12-90</a></li>
+<li><a href="/files/exhibits/DeConcini/%237 FDIC Chairman Affidavit 12-13-90.pdf">Exhibit #7 FDIC Chairman Affidavit 12-13-90</a></li>
+<li><a href="/files/exhibits/DeConcini/%238 Statement from Riegle's Counsel 12-07-89.pdf">Exhibit #8 Statement from Riegle's Counsel 12-07-89</a></li>
             </ul>
         
         <h2>Video</h2>
